--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrap">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="site-title" href="{{ "/images/sticker-nav.png" | prepend: site.baseurl }}/"><img src="/static/images/sticker-nav.png" alt="Fast Monkeys">{{ site.title }}</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -17,9 +17,8 @@
         </svg>
       </a>
       <div class="trigger">
-        {% for page in site.pages %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-        {% endfor %}
+          <a class="page-link" href="http://blog.fastmonkeys.com">Blog</a>
+          <a class="page-link" href="http://www.fastmonkeys.com">fastmonkeys.com</a>
       </div>
     </nav>
 
