--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,10 +7,15 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Custom CSS -->
+    <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/components/projects-list.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/fonts/octicons/octicons.css" | prepend: site.baseurl }}">
     <script src="https://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js" type="text/javascript"></script>
+    <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}" type="text/javascript"></script>
     <script src="{{ "/js/main.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
 </head>
