--- a/css/main.css
+++ b/css/main.css
@@ -28,8 +28,8 @@ a:visited { color: #205caa; }
 .wrap:after { content:""; display:table; }
 .wrap:after { clear: both; }
 .wrap {
-  max-width: 800px;
-  padding: 0 30px;
+  max-width: 1300px;
+  padding: 0px;
   margin: 0 auto;
   zoom: 1;
 }
@@ -44,7 +44,7 @@ a:visited { color: #205caa; }
   border-top: 5px solid #333;
   border-bottom: 1px solid #e8e8e8;
   min-height: 56px;
-  background-color: white;
+  background-color: #ff941a;
 }
 
 .site-title,
@@ -141,32 +141,10 @@ a:visited { color: #205caa; }
 }
 
 
-/* Home styles */
-/* ----------------------------------------------------------*/
-
-.home h1 { margin-bottom: 25px; }
-
-.posts { list-style-type: none; }
-
-.posts li { margin-bottom: 30px; }
-
-.posts .post-link {
-  font-size: 24px;
-  letter-spacing: -1px;
-  line-height: 1;
-}
-
-.posts .post-date {
-  display: block;
-  font-size: 15px;
-  color: #818181;
-}
-
-
 /* Post styles */
 /* ----------------------------------------------------------*/
 
-.post-header { margin: 10px 0 30px; }
+/*.post-header { margin: 10px 0 30px; }
 
 .post-header h1 {
   font-size: 42px;
@@ -243,7 +221,7 @@ a:visited { color: #205caa; }
 
 .post pre code { border: none; }
 
-/* terminal */
+/* terminal *//*
 .post pre.terminal {
   border: 1px solid #000;
   background-color: #333;
@@ -251,9 +229,9 @@ a:visited { color: #205caa; }
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-}
+}*/
 
-.post pre.terminal code { background-color: #333; }
+/*.post pre.terminal code { background-color: #333; }*/
 
 /* Syntax highlighting styles */
 /* ----------------------------------------------------------*/
