--- a/_includes/templates.html
+++ b/_includes/templates.html
@@ -15,7 +15,7 @@
             {{#owner}}
             <span class="repo-owner">
                 <img src="{{avatar_url}}">
-                <a href="{{url}}" target="_blank">{{login}}</a>
+                <a href="{{html_url}}" target="_blank">{{login}}</a>
             </span>
             {{/owner}}
             {{#contributors}}
