Fix the issue "Header link points to a nonexisting page"

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrap">
 
-    <a class="site-title" href="{{ "/images/sticker-nav.png" | prepend: site.baseurl }}/"><img src="/static/images/sticker-nav.png" alt="Fast Monkeys">{{ site.title }}</a>
+    <a class="site-title" href="{{ "http://fastmonkeys.github.io" | prepend: site.baseurl }}/"><img src="/static/images/sticker-nav.png" alt="Fast Monkeys">{{ site.title }}</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
